--- a/run_once_make-1password-dir.sh.tmpl
+++ b/run_once_make-1password-dir.sh.tmpl
@@ -1,4 +1,4 @@
-{{- if (not (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat"))) }}
-#!/bin/sh
+{{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat")) -}}
+#!/usr/bin/env bash
 [ -d ~/.1password ] || mkdir -p ~/.1password
 {{ end -}}
