--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,9 +1,6 @@
-{{ $commitname := promptString "commitname" -}}
-{{ $commitemail := promptString "commitemail" -}}
-
 [user]
-        name = {{ $commitname }}
-        email = {{ $commitemail }}
+        name = Julian Anderson
+        email = julian.anderson6207@gmail.com
 [push]
         default = simple
 [alias]
