run_once: fix OS detection to account for macOS

--- a/run_once_wsl-determine-winhome.sh.tmpl
+++ b/run_once_wsl-determine-winhome.sh.tmpl
@@ -1,4 +1,6 @@
-{{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "wslvar")) -}}
+{{- if eq .chezmoi.os "linux" -}}
+  {{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "wslvar")) -}}
 #!/usr/bin/env bash
 export winhome="$(wslpath "$(wslvar USERPROFILE 2>/dev/null)")"
+  {{ end -}}
 {{ end -}}
