--- a/run_once_make-1password-dir.sh.tmpl
+++ b/run_once_make-1password-dir.sh.tmpl
@@ -1,4 +1,6 @@
-{{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat")) -}}
+{{- if eq .chezmoi.os "linux" }}
+  {{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "socat")) -}}
 #!/usr/bin/env bash
 [ -d ~/.1password ] || mkdir -p ~/.1password
+  {{ end -}}
 {{ end -}}
