gitconfig: fix a couple of typos

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -20,13 +20,13 @@
 	light = false		# set to true if using a light-themed terminal
 
 [interactive]
-    diffFIlter = delta --color-only
+    diffFilter = delta --color-only
 
 [merge]
 	conflictstyle = diff3
 
 [diff]
 	colormoved = default
-{{ end -}}
+{{ end }}
 [add.interactive]
 	useBuiltin = false
