update winhome script based on shellcheck SC2155

--- a/run_once_wsl-determine-winhome.sh.tmpl
+++ b/run_once_wsl-determine-winhome.sh.tmpl
@@ -1,6 +1,7 @@
 {{- if eq .chezmoi.os "linux" -}}
   {{- if (and (.chezmoi.kernel.osrelease | lower | contains "microsoft") (lookPath "wslvar")) -}}
 #!/usr/bin/env bash
-export winhome="$(wslpath "$(wslvar USERPROFILE 2>/dev/null)")"
+winhome="$(wslpath "$(wslvar USERPROFILE 2>/dev/null)")"
+export winhome
   {{ end -}}
 {{ end -}}
