gitconfig: add push.autoSetupRemote

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -23,6 +23,7 @@
 	gpgsign = true
 [push]
         default = simple
+        autoSetupRemote = true
 [alias]
         jedi = push --force
         goofed = reset --hard origin/master
