--- a/dot_zimrc.tmpl
+++ b/dot_zimrc.tmpl
@@ -73,3 +73,4 @@ zmodule ohmyzsh/ohmyzsh --root plugins/git
 zmodule ohmyzsh/ohmyzsh --root plugins/debian
 {{ end -}}
 zmodule zsh-users/zsh-syntax-highlighting
+zmodule zsh-users/zsh-autosuggestions
