--- a/dot_zimrc.tmpl
+++ b/dot_zimrc.tmpl
@@ -6,6 +6,7 @@ zmodule environment
 zmodule input
 ### utility aliases and functions (incl. adding color to ls, grep, less)
 zmodule utility
+zmodule termtitle
 ### find best help and use it
 zmodule run-help
 ## ohmyzsh stuff
