desktop: add 1Password shortcuts if 1P present and in GUI env

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -1,1 +1,5 @@
 README.md
+
+{{- if not (and .have1password (lstat "/usr/share/applications/1password.desktop")) }}
+.local/share/applications/1Password.desktop
+{{- end }}
